# punkgo-jack

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  TODOS.md  install.ps1  install.sh
.github/workflows/: ci.yml  release.yml
adapters/claude-code/: hooks-template.json
assets/: gen_grid.py
design/: qr-roast.b64  viewer-concepts.html  viewer-demo.html  viewer-ledger.html
examples/verify-go/: README.md  go.mod  main.go
examples/verify-go/testdata/: proof.json
src/: anchor.rs  audit_rebuild.rs  backend.rs  blob.rs  config.rs  daemon.rs  data_fetch.rs  export.rs  history.rs  indexer.rs  ingest.rs  ipc_client.rs  main.rs  mcp.rs  presence.rs  redact.rs  report.rs  roast.rs  roast_analysis.rs  roast_assets.rs  roast_config.rs  roast_render.rs  scan.rs  session.rs  setup.rs  spillover.rs  tools.rs  tsa_verify.rs  upgrade.rs  verify.rs
src/adapters/: claude_code.rs  codex.rs  cursor.rs  mod.rs
src/index/: mod.rs  schema.rs  sessions.rs  signatures.rs  turn_content.rs  turns.rs
src/roast/: analysis.rs  assets.rs  config.rs  mod.rs  render.rs  roast_config.toml
src/signature/: mod.rs  parser.rs
src/transcript/: mod.rs  scanner.rs
tests/fixtures/: digicert_sample.tsr
