[package]
name = "punkgo-jack"
version = "0.6.1"
edition = "2021"
description = "AI tool hook adapter for punkgo-kernel — every tool call gets a cryptographic receipt with Ed25519 signing and RFC 3161 TSA anchoring"
license = "MIT"
repository = "https://github.com/PunkGo/punkgo-jack"
homepage = "https://punkgo.ai"
rust-version = "1.88"
readme = "README.md"
keywords = ["ai", "audit", "merkle", "agent", "accountability"]
categories = ["command-line-utilities", "development-tools", "cryptography"]
include = ["src/**/*", "assets/**/*", "Cargo.toml", "README.md", "LICENSE", "CHANGELOG.md"]

[features]
default = ["roast-png"]
roast-png = ["resvg", "usvg", "tiny-skia"]
rebuild-audit = ["sqlx"]

[dependencies]
anyhow = "1"
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "process", "io-util"] }
tracing = "0.1"
tracing-subscriber = "0.3"
punkgo-core = "0.5.0"
uuid = { version = "1", features = ["v4"] }
rmcp = { version = "0.16.0", features = ["server", "transport-io"] }
interprocess = "2.4"
sha2 = "0.10"
tlog_tiles = "0.2.0"
ureq = "2"
base64 = "0.22"
toml = "0.8"
x509-tsp = "0.1"
cms = "0.2"
der = { version = "0.7", features = ["derive", "oid"] }
spki = "0.7"
const-oid = "0.9"
regex = "1"
once_cell = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"], optional = true }
resvg = { version = "0.47", optional = true }
usvg = { version = "0.47", optional = true }
tiny-skia = { version = "0.12", optional = true }

[dev-dependencies]
punkgo-kernel = "0.5.0"
tempfile = "3"
